--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,19 @@ jobs:
         node-version: [20]
     steps:
     - uses: actions/checkout@v4
+
     - name: Install pnpm
       uses: pnpm/action-setup@v4
       with:
-        version: 9.5
+        version: 9
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+        working-directory: ${{ env.app }}
+     
 
     - name: Install dependencies
       run: pnpm install
