--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
+        cache-dependency-path: ${{ env.app }}/pnpm-lock.yaml
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
 
