ci: dont make audit crash on low
Changelog: ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       working-directory: ${{ env.app }}
 
     - name: Audit application
-      run: pnpm audit
+      run: pnpm audit --audit-level=moderate
       working-directory: ${{ env.app }}
 
     - name: Build application
