--- a/news-app/package.json
+++ b/news-app/package.json
@@ -19,7 +19,9 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.14",
 		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -40,6 +42,7 @@
 	"dependencies": {
 		"@libsql/client": "^0.9.0",
 		"@tailwindcss/typography": "^0.5.15",
-		"drizzle-orm": "^0.33.0"
+		"drizzle-orm": "^0.33.0",
+		"fast-xml-parser": "^4.5.0"
 	}
 }
