--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
-name: Sveltekit News Application
+name: Build Application
 
-on: [push]
+on:
+  push:
+    paths:
+      - 'news-app/**'
 
 env:
   app: ./news-app
